--- a/src/practice/由一个值匀速变动到另一个值/index.html
+++ b/src/practice/由一个值匀速变动到另一个值/index.html
@@ -31,7 +31,9 @@
             // 变化次数达到了
             from = to // 变化完成了
             clearInterval(timerId)
+            options.onMove && options.onMove(from)
             options.onEnd && options.onEnd()
+            return
           }
           options.onMove && options.onMove(from)
         }, duration)
