--- a/test.html
+++ b/test.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bouncing Ball</title>
+    <style>
+      #ball {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: red;
+        position: absolute;
+        animation: bounce 2s infinite;
+      }
+
+      @keyframes bounce {
+        0% {
+          top: 0;
+        }
+        20% {
+          top: 20%;
+        }
+        50% {
+          top: 50%;
+        }
+        80% {
+          top: 80%;
+        }
+        100% {
+          top: 0;
+          transform: scale(0.95);
+        }
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div id="ball"></div>
+  </body>
 </html>
