feat(test): 清空 test 文件；

--- a/test.html
+++ b/test.html
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Bouncing Ball</title>
-    <style>
-      #ball {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: red;
-        position: absolute;
-        animation: bounce 2s infinite;
-      }
-
-      @keyframes bounce {
-        0% {
-          top: 0;
-        }
-        20% {
-          top: 20%;
-        }
-        50% {
-          top: 50%;
-        }
-        80% {
-          top: 80%;
-        }
-        100% {
-          top: 0;
-          transform: scale(0.95);
-        }
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test</title>
   </head>
   <body>
-    <div id="ball"></div>
+    <script src="./test.js"></script>
   </body>
 </html>
