--- a/test.html
+++ b/test.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>测试</title>
   </head>
-  <body></body>
+  <body>
+    <h1>测试</h1>
+  </body>
 </html>
