--- a/src/手写/洋葱模型/index.html
+++ b/src/手写/洋葱模型/index.html
@@ -6,6 +6,6 @@
     <title>洋葱模型</title>
   </head>
   <body>
-    <script src="./index.js"></script>
+    <script src="./index2.js"></script>
   </body>
 </html>
