--- a/test.html
+++ b/test.html
@@ -7,5 +7,77 @@
   </head>
   <body>
     <h1>测试</h1>
+
+    <canvas id="myCanvas" width="400" height="200"></canvas>
+    <script>
+      const canvas = document.getElementById("myCanvas")
+      const ctx = canvas.getContext("2d")
+
+      // 示例点数组
+      const points = [
+        { x: 50, y: 100 },
+        { x: 70, y: 90 },
+        { x: 100, y: 90 },
+        { x: 150, y: 70 },
+      ]
+
+      // 方法一：使用二次贝塞尔自动插值（推荐简单实现）
+      // function drawSmoothCurve(points) {
+      //   ctx.beginPath()
+      //   ctx.moveTo(points[0].x, points[0].y)
+
+      //   for (let i = 1; i < points.length - 2; i++) {
+      //     const xc = (points[i].x + points[i + 1].x) / 2
+      //     const yc = (points[i].y + points[i + 1].y) / 2
+      //     ctx.quadraticCurveTo(points[i].x, points[i].y, xc, yc)
+      //   }
+
+      //   // 连接最后两个点
+      //   ctx.quadraticCurveTo(
+      //     points[points.length - 2].x,
+      //     points[points.length - 2].y,
+      //     points[points.length - 1].x,
+      //     points[points.length - 1].y
+      //   )
+
+      //   ctx.strokeStyle = "#f00"
+      //   ctx.stroke()
+      // }
+
+      // 方法二：Catmull-Rom样条精确实现（更平滑）
+      function catmullRom(ctx, points, tension = 1) {
+        ctx.beginPath()
+        ctx.moveTo(points[0].x, points[0].y)
+
+        for (let i = 0; i < points.length - 1; i++) {
+          const p0 = points[Math.max(0, i - 1)]
+          const p1 = points[i]
+          const p2 = points[i + 1]
+          const p3 = points[Math.min(points.length - 1, i + 2)]
+
+          const cp1x = p1.x + ((p2.x - p0.x) / 6) * tension
+          const cp1y = p1.y + ((p2.y - p0.y) / 6) * tension
+          const cp2x = p2.x - ((p3.x - p1.x) / 6) * tension
+          const cp2y = p2.y - ((p3.y - p1.y) / 6) * tension
+
+          ctx.bezierCurveTo(cp1x, cp1y, cp2x, cp2y, p2.x, p2.y)
+        }
+
+        ctx.strokeStyle = "#f00"
+        ctx.stroke()
+      }
+
+      // 绘制原始点
+      // points.forEach((p) => {
+      //   ctx.beginPath()
+      //   ctx.arc(p.x, p.y, 3, 0, Math.PI * 2)
+      //   ctx.fillStyle = "#000"
+      //   ctx.fill()
+      // })
+
+      // 绘制两种曲线
+      // drawSmoothCurve(points) // 红色曲线
+      catmullRom(ctx, points) // 蓝色曲线（最终显示会覆盖，实际可分开展示）
+    </script>
   </body>
 </html>
